Refactor sorting visualizer using JavaFX and remove old files